Pushing this minor update to the repo to keep it up to date. Not finished, still working on it

--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD_driver_evaluate_MHD_rhs.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD_driver_evaluate_MHD_rhs.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -77,6 +77,7 @@
    ],
    "source": [
     "%%writefile driver_evaluate_MHD_rhs.C\n",
+    "\n",
     "/*********************************************\n",
     " * Evaluate RHS of GRMHD & induction equations\n",
     " * (vector potential prescription), using the \n",
@@ -111,7 +112,7 @@
     " * This version of PPM implements the standard \n",
     " * Colella & Woodward PPM, though modified as in GRHydro\n",
     " * to have 3 ghostzones instead of 4. \n",
-    " *********************************************/\n"
+    " *********************************************/"
    ]
   },
   {
@@ -120,15 +121,15 @@
    "source": [
     "<a id='header_files'></a>\n",
     "\n",
-    "## Step 1.2: Load up necessary ETK and IllinoisGRMHD header files \\[Back to [top](#toc)\\]\n",
+    "## Step 1.2: Load up necessary ETK and `IllinoisGRMHD` header files \\[Back to [top](#toc)\\]\n",
     "$$\\label{header_files}$$\n",
     "\n",
-    "<font color='red'>**Leo says**: should I describe what each header is useful for? Might be neat for new users, but since I'm a new user myself I probably might want to add these descriptions later. :P</font>"
+    "Here we load all necessary ETK and `IllinoisGRMHD` file, as well as some standard C++ libraries."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +152,7 @@
     "#include \"cctk_Parameters.h\"\n",
     "#include \"IllinoisGRMHD_headers.h\" /* Generic #define's and function prototypes */\n",
     "#include \"driver_evaluate_MHD_rhs.h\" /* Function prototypes for this file only */\n",
-    "#include \"inlined_functions.C\"\n"
+    "#include \"inlined_functions.C\""
    ]
   },
   {
@@ -163,12 +164,12 @@
     "## Step 1.3: The ` IllinoisGRMHD_driver_evaluate_MHD_rhs()` function \\[Back to [top](#toc)\\]\n",
     "$$\\label{driver_mhd_rhs_function}$$\n",
     "\n",
-    "Leo says: should I describe what each header is useful for? Might be neat for new users, but since I'm a new user I probably might want to add these descriptions later."
+    "This is the basic function declaration. We set up basic ETK parameters and verify double precision is being used."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +196,45 @@
     "\n",
     "  if(cctk_nghostzones[0]<3 || cctk_nghostzones[1]<3 || cctk_nghostzones[2]<3) { CCTK_VError(VERR_DEF_PARAMS,\"ERROR. Need at least 3 ghostzones for IllinoisGRMHD evolutions.\"); }\n",
     "\n",
-    "  CCTK_REAL dX[3] = { CCTK_DELTA_SPACE(0), CCTK_DELTA_SPACE(1), CCTK_DELTA_SPACE(2) };\n",
+    "  CCTK_REAL dX[3] = { CCTK_DELTA_SPACE(0), CCTK_DELTA_SPACE(1), CCTK_DELTA_SPACE(2) };"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eos_parameters'></a>\n",
+    "\n",
+    "### Step 1.3.a: Equation of state (EOS) parameters \\[Back to [top](#toc)\\]\n",
+    "$$\\label{eos_parameters}$$\n",
+    "\n",
+    "Next we set up the EOS struct, which is defined in the `IllinoisGRMHD_headers.h` header file. We set the following parameters:\n",
+    "\n",
+    "* $\\rm neos$: number of EOS (currently set to 1, which is a $\\Gamma$-law EOS)\n",
+    "* $\\rm K\\_poly$: this is the constant $\\kappa$ from the polytropic EOS $P = \\kappa \\rho_{0}^{\\Gamma}$\n",
+    "* $\\rm rho\\_tab$: $\\rho_{0}$, fluid rest-mass\n",
+    "* $\\rm P\\_tab$: $P$, pressure\n",
+    "* $\\rm gamma\\_th$: $\\Gamma_{\\rm th}$, the constant parameter which determines the conversion efficiency of kinetic to thermal energy at shocks\n",
+    "* $\\rm eps\\_tab$: $\\epsilon$, specific internal energy\n",
+    "* $\\rm k\\_tab$: $\\kappa$, polytropic EOS constant\n",
+    "* $\\rm gamma\\_tab$: $\\Gamma$, the $\\Gamma$-law EOS constant"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to driver_evaluate_MHD_rhs.C\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile -a driver_evaluate_MHD_rhs.C\n",
     "\n",
     "  // FIXME: only for single gamma-law EOS.\n",
     "  eos_struct eos;\n",
@@ -206,7 +245,26 @@
     "  eos.gamma_th=gamma_th;\n",
     "  eos.eps_tab[0]=eps_tab[0];\n",
     "  eos.k_tab[0]=k_tab[0];   eos.k_tab[1]=k_tab[1];\n",
-    "  eos.gamma_tab[0]=gamma_tab[0]; eos.gamma_tab[1]=gamma_tab[1];\n",
+    "  eos.gamma_tab[0]=gamma_tab[0]; eos.gamma_tab[1]=gamma_tab[1];"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='set_pointers_grmhd_gfs'></a>\n",
+    "\n",
+    "### Step 1.3.b: Set pointers to GRMHD gridfunctions \\[Back to [top](#toc)\\]\n",
+    "$$\\label{set_pointers_grmhd_gfs}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile -a driver_evaluate_MHD_rhs.C\n",
     "\n",
     "  // in_prims,out_prims_r, and out_prims_l are arrays of pointers to the actual gridfunctions.\n",
     "  gf_and_gz_struct in_prims[MAXNUMVARS],out_prims_r[MAXNUMVARS],out_prims_l[MAXNUMVARS];\n",
@@ -239,7 +297,34 @@
     "  for(int i=0;i<MAXNUMVARS;i++) for(int j=1;j<=3;j++) { in_prims[i].gz_lo[j]=0; in_prims[i].gz_hi[j]=0; }\n",
     "  // Left/right variables are not yet defined, yet we set the # of gz's to zero by default:\n",
     "  for(int i=0;i<MAXNUMVARS;i++) for(int j=1;j<=3;j++) { out_prims_r[i].gz_lo[j]=0; out_prims_r[i].gz_hi[j]=0; }\n",
-    "  for(int i=0;i<MAXNUMVARS;i++) for(int j=1;j<=3;j++) { out_prims_l[i].gz_lo[j]=0; out_prims_l[i].gz_hi[j]=0; }\n",
+    "  for(int i=0;i<MAXNUMVARS;i++) for(int j=1;j<=3;j++) { out_prims_l[i].gz_lo[j]=0; out_prims_l[i].gz_hi[j]=0; }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='admbase_to_bssnbase'></a>\n",
+    "\n",
+    "### Step 1.4.b: Convert ADM variables to BSSN variables\\[Back to [top](#toc)\\]\n",
+    "$$\\label{admbase_to_bssnbase}$$\n",
+    "\n",
+    "We summarize here the algorithm of the `IllinoisGRMHD_convert_ADM_to_BSSN__enforce_detgtij_eq_1__and_compute_gtupij()` function, which is explained in detail in [this tutorial module]() (<font color='red'>**Link not available yet - TODO**</font>):\n",
+    "\n",
+    "* First, $\\gamma\\equiv \\det\\left(\\gamma_{ij}\\right)$, where $\\gamma_{ij}$ is the physical spatial metric, is evaluated.\n",
+    "* Then $\\phi$, the conformal factor, is computed via the relation $\\phi = \\frac{1}{12}\\log\\gamma$.\n",
+    "* Next, we compute $e^{-4\\phi}$.\n",
+    "* Then the conformal metric, $\\bar{\\gamma}_{ij} = e^{-4\\phi}\\gamma_{ij}$, is computed.\n",
+    "* Next the condition $\\bar\\gamma = 1$ is enforced, by first computing $\\gamma$ then performing $\\bar\\gamma_{ij}\\to\\left(\\frac{1}{\\bar\\gamma}\\right)^{1/3}\\bar\\gamma_{ij}$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile -a driver_evaluate_MHD_rhs.C\n",
     "\n",
     "  // Convert ADM variables (from ADMBase) to the BSSN-based variables expected by this routine.\n",
     "  IllinoisGRMHD_convert_ADM_to_BSSN__enforce_detgtij_eq_1__and_compute_gtupij(cctkGH,cctk_lsh,  gxx,gxy,gxz,gyy,gyz,gzz,alp,\n",
@@ -666,7 +751,7 @@
     "#include \"add_fluxes_and_source_terms_to_hydro_rhss.C\"\n",
     "#include \"mhdflux.C\"\n",
     "#include \"A_i_rhs_no_gauge_terms.C\"\n",
-    "#include \"Lorenz_psi6phi_rhs__add_gauge_terms_to_A_i_rhs.C\"\n"
+    "#include \"Lorenz_psi6phi_rhs__add_gauge_terms_to_A_i_rhs.C\""
    ]
   },
   {
