SEOBNR: more coefficient updates; ready to compare derivative values to LALSuite.

--- a/Tutorial-SEOBNR_Constant_Coefficients.ipynb
+++ b/Tutorial-SEOBNR_Constant_Coefficients.ipynb
@@ -111,12 +111,10 @@
     "    Delta5l = (64./5.)*EtaKm1sq\n",
     "\n",
     "    #Add comment here\n",
-    "    d1 = 0\n",
-    "    d1v2 = -74.71 - 156.*eta + 627.5*eta*eta\n",
-    "    dheffSS = 0\n",
-    "    dheffSSv2 = 8.127 - 154.2*eta + 830.8*eta*eta\n",
+    "    dSO = -74.71 - 156.*eta + 627.5*eta*eta\n",
+    "    dSS = 8.127 - 154.2*eta + 830.8*eta*eta\n",
     "\n",
-    "    return K, Delta0, Delta1, Delta2, Delta3, Delta4, Delta5, Delta5l, d1, d1v2, dheffSS, dheffSSv2"
+    "    return K, Delta0, Delta1, Delta2, Delta3, Delta4, Delta5, Delta5l, dSO, dSS"
    ]
   },
   {
