Added the discussion for the last piece of code. I'm not satisfied with the way its done, yet. I describe a large portion of the code with a large portion of LaTeX, but it doesn't feel very readable at the moment. Will return to this in due time.

--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD_driver_evaluate_MHD_rhs.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD_driver_evaluate_MHD_rhs.ipynb
@@ -40,7 +40,8 @@
     "        1. [Step 1.3.4](#pointers_metric_tmunu_gfs): Setting up pointers to the metric and stress-energy tensor gridfunctions\n",
     "        1. [Step 1.3.5](#initialize_rhss): Initialization of the RHS variables\n",
     "        1. [Step 1.3.6](#tau_rhs_ext_curv_and_tupmunu): Compute extrinsic curvature terms from the RHS of $\\partial_{t}\\tilde\\tau$ and $T^{\\mu\\nu}$\n",
-    "        1. [Step 1.3.7](#computing_ftilde): Computing ${\\rm ftilde}$ (??)\n",
+    "        1. [Step 1.3.7](#computing_ftilde): Computing ${\\rm ftilde}$\n",
+    "        1. [Step 1.3.8](#rhs_mhd_and_a_i): The RHSs of $\\rho_{\\star}$, $\\tilde\\tau$, $\\tilde{S}_{i}$, and $A_{i}$\n",
     "1. [Step 2](#latex_pdf_output): **Output this module to $\\LaTeX$-formatted PDF file**"
    ]
   },
@@ -558,12 +559,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='...'></a>\n",
+    "<a id='rhs_mhd_and_a_i'></a>\n",
     "\n",
-    "### Step 1.3.8: The RHSs of $\\rho_{\\star}$, $\\tilde\\tau$, $\\tilde{S}_{i}$, and $A_{i}$\\[Back to [top](#toc)\\]\n",
-    "$$\\label{...}$$\n",
+    "### Step 1.3.8: The RHSs of $\\rho_{\\star}$, $\\tilde\\tau$, $\\tilde{S}_{i}$, and $A_{i}$ \\[Back to [top](#toc)\\]\n",
+    "$$\\label{rhs_mhd_and_a_i}$$\n",
     "\n",
-    "This part of the code evaluates the spatial derivatives of the flux terms on the RHSs of $\\rho_{\\star}$, $\\tilde\\tau$, and $\\tilde{S}_{i}$, i.e.\n",
+    "This part of the code evaluates the RHSs of $\\rho_{\\star}$, $\\tilde\\tau$, and $\\tilde{S}_{i}$, i.e.\n",
     "\n",
     "$$\n",
     "\\partial_{t}\n",
@@ -591,7 +592,35 @@
     "\n",
     "$$\n",
     "\\partial_{t}A_{i} = \\epsilon_{ijk}v^{j}\\tilde{B}^{k} - \\partial_{i}\\left(\\alpha\\Phi - \\beta^{j}A_{j}\\right) = \\psi^{6}\\epsilon_{ijk}v^{j}B^{k} - \\underbrace{\\partial_{i}\\left(\\alpha\\Phi - \\beta^{j}A_{j}\\right)}_{\\rm Gauge\\ terms}\n",
-    "$$"
+    "$$\n",
+    "\n",
+    "The following summary greatly oversimplifies what the code below does, but it is enough for the user to understand the purpose of the algorithm:\n",
+    "\n",
+    "1. Compute $\\partial_{x}\\boldsymbol{F}$, then $\\partial_{y}\\boldsymbol{F}$, and finally $\\left[\\partial_{t}A_{z}\\right]_{\\rm no\\ gauge\\ terms}$\n",
+    "2. Compute $\\partial_{y}\\boldsymbol{F}$, then $\\left[\\partial_{t}A_{x}\\right]_{\\rm no\\ gauge\\ terms}$\n",
+    "3. Compute $\\left[\\partial_{t}A_{y}\\right]_{\\rm no\\ gauge\\ terms}$\n",
+    "4. Add gauge terms to $\\partial_{t}A_{i}$\n",
+    "\n",
+    "Now, in between every step of the summary above, care must be taken to evaluate the gridfunctions at the appropriate gridpoints (see table below for the location of each variable in the computational grid).\n",
+    "\n",
+    "|                           Variable(s)                            | Gridpoint location in the computational grid  |\n",
+    "|------------------------------------------------------------------|-----------------------------------------------|\n",
+    "| Metric terms, $\\vec{P}$, $\\rho_*$, $\\tilde{S}_i$, $\\tilde{\\tau}$ |                   $(i,j,k)$                   |\n",
+    "|                       $B^x$, $\\tilde{B}^x$                       |             $(i+\\frac{1}{2},j,k)$             |\n",
+    "|                       $B^y$, $\\tilde{B}^y$                       |             $(i,j+\\frac{1}{2},k)$             |\n",
+    "|                       $B^z$, $\\tilde{B}^z$                       |             $(i,j,k+\\frac{1}{2})$             |\n",
+    "|                              $A_x$                               |       $(i,j+\\frac{1}{2},k+\\frac{1}{2})$       |\n",
+    "|                              $A_y$                               |       $(i+\\frac{1}{2},j,k+\\frac{1}{2})$       |\n",
+    "|                              $A_z$                               |       $(i+\\frac{1}{2},j+\\frac{1}{2},k)$       |\n",
+    "|                       $\\sqrt{\\gamma}\\Phi$                        | $(i+\\frac{1}{2},j+\\frac{1}{2},k+\\frac{1}{2})$ |\n",
+    "\n",
+    "For example, we know that\n",
+    "\n",
+    "$$\n",
+    "\\left[\\partial_{t}A_{z}\\right]_{\\rm no\\ gauge\\ terms} \\equiv \\psi^{6}\\left(v^{x}B^{y} - v^{y}B^{x}\\right)\\ .\n",
+    "$$\n",
+    "\n",
+    "But once we evaluate $v^{x}$ and $v^{y}$, we know them at the point $(i,j,k)$. Similarly, the gridfunction $B^{x}$ is known at $(i+\\frac{1}{2},j,k)$, while $B^{y}$ is known at $(i,j+\\frac{1}{2},k)$. This means that we are not able to immediately evaluate the equation above, since determining $A_{z}$ at $(i+\\frac{1}{2},j+\\frac{1}{2},k)$ requires knowning $\\left\\{v^{x},v^{y},B^{x},B^{y}\\right\\}$ at $(i+\\frac{1}{2},j+\\frac{1}{2},k)$ as well. To this end, we reconstruct the variables $\\left\\{v^{x},v^{y},B^{x},B^{y}\\right\\}$ using the PPM method at the desired staggered point. An analogous procedure is required in order to determine the RHS of $\\partial_{t}A_{x}$ and $\\partial_{t}A_{y}$."
    ]
   },
   {
@@ -613,10 +642,10 @@
     "  /* There are two stories going on here:\n",
     "   * 1) Computation of \\partial_x on RHS of \\partial_t {rho_star,tau,mhd_st_{x,y,z}}, \n",
     "   *    via PPM reconstruction onto (i-1/2,j,k), so that \n",
-    "   *    \\partial_y F = [ F(i+1/2,j,k) - F(i-1/2,j,k) ] / dx\n",
+    "   *    \\partial_x F = [ F(i+1/2,j,k) - F(i-1/2,j,k) ] / dx\n",
     "   * 2) Computation of \\partial_t A_i, where A_i are *staggered* gridfunctions,\n",
     "   *    where A_x is defined at (i,j+1/2,k+1/2), A_y at (i+1/2,j,k+1/2), etc.\n",
-    "   *    Ai_rhs = \\partial_t A_i = \\epsilon_{ijk} \\psi^{6} (v^j B^k - v^k B^j),\n",
+    "   *    Ai_rhs = \\partial_t A_i = \\epsilon_{ijk} \\psi^{6} (v^j B^k - v^j B^k),\n",
     "   *    where \\epsilon_{ijk} is the flat-space antisymmetric operator.\n",
     "   * 2A) Az_rhs is defined at (i+1/2,j+1/2,k), and it depends on {Bx,By,vx,vy},\n",
     "   *     so the trick is to reconstruct {Bx,By,vx,vy} cleverly to get to these\n",
