--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD_driver_evaluate_MHD_rhs.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD_driver_evaluate_MHD_rhs.ipynb
@@ -521,7 +521,7 @@
     "## Step 3.7: Computing ${\\rm ftilde}$ \\[Back to [top](#toc)\\]\n",
     "$$\\label{computing_ftilde}$$\n",
     "\n",
-    "**Leo says**: This is part of the flattening scheme of the PPM algorithm. I will come back to this once I understand it in more detail. The main reference to look at is [Colella & Woodward (1983)](http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.392.7695&rep=rep1&type=pdf). The equations implemented can be found in Appendix A (particularly eqs. (A.1) and (A.2)), while the flattening method is introduced and discussed in section 4. More will follow when we talk about the `reconstruct_set_of_prims_PPM.C` file of `IllinoisGRMHD`."
+    "**Leo says**: This is part of the flattening scheme of the PPM algorithm. I will come back to this once I understand it in more detail. The main reference to look at is [Colella & Woodward (1983)](https://crd.lbl.gov/assets/pubs_presos/AMCS/ANAG/A141984.pdf). The equations implemented can be found in Appendix A (particularly eqs. (A.1) and (A.2)), while the flattening method is introduced and discussed in section 4. More will follow when we talk about the `reconstruct_set_of_prims_PPM.C` file of `IllinoisGRMHD`."
    ]
   },
   {
