Fix ToC labels and make sure all file paths are OS agnostic.

--- a/Tutorial-Start_to_Finish-GiRaFFE_HO-1D_tests.ipynb
+++ b/Tutorial-Start_to_Finish-GiRaFFE_HO-1D_tests.ipynb
@@ -42,7 +42,7 @@
     "1. [Step 1](#writec): Use NRPy+ to generate necessary C code to solve the scalar wave equation in curvilinear, singular coordinates\n",
     "    1. [Step 1.a](#mol_timestep): Use NRPy+ to generate the RK4 timestepping method\n",
     "    1. [Step 1.b](#c_headers): Use NRPy+ to generate C headers\n",
-    "    1. [Step 1.c](#mol_timestep): Copy code over from the GiRaFFE C code library\n",
+    "    1. [Step 1.c](#copy_c): Copy code over from the GiRaFFE C code library\n",
     "    1. [Step 1.d](#initial_data): Import Alfv&eacute;n Wave initial data C function\n",
     "    1. [Step 1.e](#poynting): Import densitized Poynting flux initial data conversion C function\n",
     "    1. [Step 1.f](#rhs): Output GiRaFFE RHS expressions\n",
@@ -54,7 +54,7 @@
     "    1. [Step 2.e](#gridfuncs): Define gridfunctions\n",
     "    1. [Step 2.f](#bcs): Boundary Conditions, the A-to-B driver, and the conservative-to-primitive solver\n",
     "    1. [Step 2.g](#timestep): Find the CFL-constrained timestep\n",
-    "    1. [Step 2.h](#initial_data): Declare the function for the exact solution\n",
+    "    1. [Step 2.h](#initial_data_c): Declare the function for the exact solution\n",
     "    1. [Step 2.i](#rhsC): Declare the functions to evaluate the GRFFE RHSs\n",
     "    1. [Step 2.j](#main): The `main()` function\n",
     "1. [Step 3](#convergence): Code validation: Verify that relative error in numerical solution converges to zero at the expected order\n",
@@ -196,7 +196,7 @@
     "#################\n",
     "\n",
     "# First output the coordinate bounds xxmin[] and xxmax[]:\n",
-    "with open(outdir+\"xxminmax.h\", \"w\") as file:\n",
+    "with open(outdir,\"xxminmax.h\", \"w\") as file:\n",
     "    file.write(\"const REAL xxmin[3] = {\"+str(rfm.xxmin[0])+\",\"+str(rfm.xxmin[1])+\",\"+str(rfm.xxmin[2])+\"};\\n\")\n",
     "    file.write(\"const REAL xxmax[3] = {\"+str(rfm.xxmax[0])+\",\"+str(rfm.xxmax[1])+\",\"+str(rfm.xxmax[2])+\"};\\n\")\n",
     "\n",
@@ -204,21 +204,21 @@
     "#     This is used to find the minimum timestep.\n",
     "dxx     = ixp.declarerank1(\"dxx\",DIM=3)\n",
     "ds_dirn = rfm.ds_dirn(dxx)\n",
-    "outputC([ds_dirn[0],ds_dirn[1],ds_dirn[2]],[\"ds_dirn0\",\"ds_dirn1\",\"ds_dirn2\"],outdir+\"ds_dirn.h\")\n",
+    "outputC([ds_dirn[0],ds_dirn[1],ds_dirn[2]],[\"ds_dirn0\",\"ds_dirn1\",\"ds_dirn2\"],os.path.join(outdir,\"ds_dirn.h\"))\n",
     "\n",
     "# Generic coordinate NRPy+ file output, Part 2: output the conversion from (x0,x1,x2) to Cartesian (x,y,z)\n",
     "outputC([rfm.xxCart[0],rfm.xxCart[1],rfm.xxCart[2]],[\"xCart[0]\",\"xCart[1]\",\"xCart[2]\"],\n",
-    "        outdir+\"xxCart.h\")"
+    "        os.path.join(outdir,\"xxCart.h\"))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='mol_timestep'></a>\n",
+    "<a id='copy_c'></a>\n",
     "\n",
     "## Step 1.c: Copy code over from the GiRaFFE C code library \\[Back to [top](#toc)\\]\n",
-    "$$\\label{mol_timestep}$$\n",
+    "$$\\label{copy_c}$$\n",
     "\n",
     "There are some important C codes that we have already written that are stored elsewhere. We will now copy them to our working directory. More detail about these codes can be found here:\n",
     "* [Tutorial-GiRaFFE_HO_C_code_library-A2B.ipynb](Tutorial-GiRaFFE_HO_C_code_library-A2B.ipynb)\n",
@@ -235,16 +235,16 @@
     "# First, let's make sure that the directories to which we want to copy files exist.\n",
     "# The cmdline_helper function mkdir will do this regardless of OS\n",
     "\n",
-    "cmd.mkdir(os.path.join(outdir+\"boundary_conditions/\"))\n",
-    "cmd.mkdir(os.path.join(outdir+\"A2B/\"))\n",
+    "cmd.mkdir(os.path.join(outdir,\"boundary_conditions/\"))\n",
+    "cmd.mkdir(os.path.join(outdir,\"A2B/\"))\n",
     "\n",
     "# Now, we'll start copying files using shutil.copy(src,dst)\n",
-    "shutil.copy(os.path.join(\"GiRaFFE_HO/GiRaFFE_Ccode_library/A2B/driver_AtoB.c\"),os.path.join(outdir+\"A2B/\"))\n",
+    "shutil.copy(os.path.join(\"GiRaFFE_HO/GiRaFFE_Ccode_library/A2B/driver_AtoB.c\"),os.path.join(outdir,\"A2B/\"))\n",
     "\n",
     "shutil.copy(os.path.join(\"GiRaFFE_HO/GiRaFFE_Ccode_library/driver_conserv_to_prims_FFE.C\"),os.path.join(outdir))\n",
     "shutil.copy(os.path.join(\"GiRaFFE_HO/GiRaFFE_Ccode_library/compute_conservatives_FFE.C\"),os.path.join(outdir))\n",
     "\n",
-    "shutil.copy(os.path.join(\"GiRaFFE_HO/GiRaFFE_Ccode_library/boundary_conditions/GiRaFFE_boundary_conditions.h\"),os.path.join(outdir+\"boundary_conditions/\"))\n"
+    "shutil.copy(os.path.join(\"GiRaFFE_HO/GiRaFFE_Ccode_library/boundary_conditions/GiRaFFE_boundary_conditions.h\"),os.path.join(outdir,\"boundary_conditions/\"))\n"
    ]
   },
   {
@@ -307,13 +307,13 @@
     "#                                   GiRaFFEfood_A_v_CKernel.replace(\"time\",\"cctk_time\"))\n",
     "\n",
     "# Step 4: Write the C code kernel to file.\n",
-    "with open(outdir+\"GiRaFFEfood_A_v_1D_tests_left.h\", \"w\") as file:\n",
+    "with open(os.path.join(outdir,\"GiRaFFEfood_A_v_1D_tests_left.h\"), \"w\") as file:\n",
     "    file.write(str(GiRaFFEfood_A_v_CKernel_left))\n",
     "\n",
-    "with open(outdir+\"GiRaFFEfood_A_v_1D_tests_center.h\", \"w\") as file:\n",
+    "with open(os.path.join(outdir,\"GiRaFFEfood_A_v_1D_tests_center.h\"), \"w\") as file:\n",
     "    file.write(str(GiRaFFEfood_A_v_CKernel_center))\n",
     "\n",
-    "with open(outdir+\"GiRaFFEfood_A_v_1D_tests_right.h\", \"w\") as file:\n",
+    "with open(os.path.join(outdir,\"GiRaFFEfood_A_v_1D_tests_right.h\"), \"w\") as file:\n",
     "    file.write(str(GiRaFFEfood_A_v_CKernel_right))\n"
    ]
   },
@@ -361,7 +361,7 @@
     "#                           GiRaFFE_S_CKernel.replace(\"time\",\"cctk_time\"))\n",
     "\n",
     "# Step 4: Write the C code kernel to file.\n",
-    "with open(outdir+\"GiRaFFEfood_HO_Stilde.h\", \"w\") as file:\n",
+    "with open(os.path.join(outdir,\"GiRaFFEfood_HO_Stilde.h\"), \"w\") as file:\n",
     "    file.write(str(GiRaFFE_S_CKernel))\n"
    ]
   },
@@ -478,20 +478,20 @@
     "end = time.time()\n",
     "\n",
     "# Write the C code kernel to file.\n",
-    "with open(outdir+\"Prereqs.h\", \"w\") as file:\n",
+    "with open(os.path.join(outdir,\"Prereqs.h\"), \"w\") as file:\n",
     "    file.write(str(Prereqs_looped))\n",
     "\n",
-    "with open(outdir+\"metric_quantities.h\", \"w\") as file:\n",
+    "with open(os.path.join(outdir,\"metric_quantities.h\"), \"w\") as file:\n",
     "    file.write(str(metric_quantities_looped))\n",
     "\n",
-    "with open(outdir+\"Conservs.h\", \"w\") as file:\n",
+    "with open(os.path.join(outdir,\"Conservs.h\"), \"w\") as file:\n",
     "    file.write(str(Conservs_looped))\n",
     "\n",
     "# Step 5: Import the function to calculate u0 and write it to a file.\n",
     "import u0_smallb_Poynting__Cartesian.u0_smallb_Poynting__Cartesian as u0etc\n",
     "#u0etc.compute_u0_smallb_Poynting__Cartesian(gammaDD,betaU,alpha,ValenciavU,BU)\n",
     "\n",
-    "with open(outdir+\"computeu0_Cfunction.h\", \"w\") as file:\n",
+    "with open(os.path.join(outdir,\"computeu0_Cfunction.h\"), \"w\") as file:\n",
     "    file.write(u0etc.computeu0_Cfunction)\n"
    ]
   },
@@ -626,7 +626,7 @@
    "outputs": [],
    "source": [
     "# Part P0: Set the number of ghost cells, from NRPy+'s FD_CENTDERIVS_ORDER\n",
-    "with open(outdir+\"NGHOSTS.h\", \"w\") as file:\n",
+    "with open(os.path.join(outdir,\"NGHOSTS.h\"), \"w\") as file:\n",
     "    file.write(\"// Part P0: Set the number of ghost zones, from NRPy+'s FD_CENTDERIVS_ORDER\\n\")\n",
     "    # We do not need upwinding in GiRaFFE\n",
     "    file.write(\"#define NGHOSTS \"+str(int(par.parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\")/2+1))+\"\\n\")"
@@ -881,7 +881,7 @@
     "<a id='initial_data'></a>\n",
     "\n",
     "# Step 2.h: Declare the function for the exact solution \\[Back to [top](#toc)\\]\n",
-    "$$\\label{initial_data}$$"
+    "$$\\label{initial_data_c}$$"
    ]
   },
   {
@@ -1314,7 +1314,7 @@
     "\n",
     "print(\"Now compiling, should take ~2 seconds...\\n\")\n",
     "start = time.time()\n",
-    "cmd.C_compile(outdir+\"GiRaFFE_standalone.c\", \"GiRaFFE_standalone_1D\")\n",
+    "cmd.C_compile(os.path.join(outdir,\"GiRaFFE_standalone.c\"), \"GiRaFFE_standalone_1D\")\n",
     "# Switching back so I can use a nan checker\n",
     "#!gcc -g -O2 -fopenmp GiRaFFE_standalone/GiRaFFE_standalone.c -o GiRaFFE_standalone_1D -lm\n",
     "end = time.time()\n",
