--- a/Tutorial-GiRaFFE_HO_C_code_library-BCs.ipynb
+++ b/Tutorial-GiRaFFE_HO_C_code_library-BCs.ipynb
@@ -36,7 +36,8 @@
     "    1. [Step 2.b](#apply_exact): Applying the exact Boundary Conditions to $A_i$ and $v^i$    \n",
     "    1. [Step 2.c](#stilded): Setting $\\tilde{S}_i$ exactly \n",
     "    1. [Step 2.d](#apply_stilded): Applying the exact Boundary Conditions to $\\tilde{S}_i$\n",
-    "1. [Step 3](#code_validation): Code Validation against original C code"
+    "1. [Step 3](#code_validation): Code Validation against original C code\n",
+    "1. [Step 4](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF file"
    ]
   },
   {
@@ -610,6 +611,19 @@
     "            print(\"No difference. TEST PASSED!\")\n",
     "        else:\n",
     "            print(\"ERROR: Disagreement found with .py file. See differences above.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='latex_pdf_output'></a>\n",
+    "\n",
+    "# Step 4: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
+    "$$\\label{latex_pdf_output}$$\n",
+    "\n",
+    "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
+    "[Tutorial-GiRaFFE_HO_C_code_library-BCs.pdf](Tutorial-GiRaFFE_HO_C_code_library-BCs.pdf) (Note that clicking on this link may not work; you may need to open the PDF file through another means.)"
    ]
   },
   {
