--- a/Tutorial-GiRaFFE_HO_C_code_library-C2P_P2C.ipynb
+++ b/Tutorial-GiRaFFE_HO_C_code_library-C2P_P2C.ipynb
@@ -40,7 +40,8 @@
     "    1. [Step 1.f](#update_vel): Recompute the velocities at the new timestep\n",
     "    1. [Step 1.g](#current_sheet): Enforce the Current Sheet prescription\n",
     "1. [Step 2](#p2c): The primitive-to-conservative solver\n",
-    "1. [Step 3](#code_validation): Code Validation against original C code"
+    "1. [Step 3](#code_validation): Code Validation against original C code\n",
+    "1. [Step 4](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF file"
    ]
   },
   {
@@ -736,6 +737,19 @@
     "            print(\"No difference. TEST PASSED!\")\n",
     "        else:\n",
     "            print(\"ERROR: Disagreement found with .py file. See differences above.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='latex_pdf_output'></a>\n",
+    "\n",
+    "# Step 4: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
+    "$$\\label{latex_pdf_output}$$\n",
+    "\n",
+    "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
+    "[Tutorial-GiRaFFE_HO_C_code_library-C2P_P2C.pdf](Tutorial-GiRaFFE_HO_C_code_library-C2P_P2C.pdf) (Note that clicking on this link may not work; you may need to open the PDF file through another means.)"
    ]
   },
   {
