SEOBNR: just update a couple print statements for comparison with LALSuite.

--- a/Tutorial-SEOBNR_Initial_Conditions.ipynb
+++ b/Tutorial-SEOBNR_Initial_Conditions.ipynb
@@ -567,6 +567,9 @@
     "#print(\"KK = %.15e, k0 = %.15e, k1 = %.15e, k2 = %.15e, k3 = %.15e, k4 = %.15e, k5 = %.15e, k5l = %.15e, dSO = %.15e, dSS = %.15e\\n\" % (KK, k0, k1, k2, k3, k4, k5, k5l, dSO, dSS))\n",
     "#The coefficients do agree with LALSuite!\n",
     "\n",
+    "#Move derivative computations here for direct comparison of Hamiltonian terms with LALSuite.  Testing only!\n",
+    "derivs = compute_dHdq(m1, m2, eta, F[0], 0., 0., 0., F[1], F[2], S1hat[0], S1hat[1], S1hat[2], S2hat[0], S2hat[1], S2hat[2], KK, k0, k1, k2, k3, k4, k5, k5l, dSO, dSS, tortoise)\n",
+    "\n",
     "# Define the function of which we want to find the roots\n",
     "def root_func(F):\n",
     "    #Recompute Hamiltonian derivatives using latest minimization guess\n",
