Added code validation in Step 4 against the original IllinoisGRMHD source code

--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD_driver_evaluate_MHD_rhs.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD_driver_evaluate_MHD_rhs.ipynb
@@ -51,7 +51,8 @@
     "        1. [Step 3.8.8](#rhs_ax_no_gauge_terms): Evaluating $\\left[\\partial_{t}A_{x}\\right]_{\\rm no\\ gauge\\ terms}$\n",
     "        1. [Step 3.8.9](#rhs_ay_no_gauge_terms): Evaluating $\\left[\\partial_{t}A_{y}\\right]_{\\rm no\\ gauge\\ terms}$\n",
     "        1. [Step 3.8.10](#rhs_psi6phi_and_ai_gauge_terms): Evaluating $\\partial_{t}\\left[\\psi^{6}\\Phi\\right]$ and $\\left[\\partial_{t}A_{i}\\right]_{\\rm gauge\\ terms}$\n",
-    "1. [Step 4](#latex_pdf_output): **Output this module to $\\LaTeX$-formatted PDF file**\n",
+    "1. [Step 4](#code_validation): **Code validation**\n",
+    "1. [Step 5](#latex_pdf_output): **Output this module to $\\LaTeX$-formatted PDF file**\n",
     "\n"
    ]
   },
@@ -90,7 +91,6 @@
    ],
    "source": [
     "%%writefile driver_evaluate_MHD_rhs.C\n",
-    "\n",
     "/*********************************************\n",
     " * Evaluate RHS of GRMHD & induction equations\n",
     " * (vector potential prescription), using the \n",
@@ -156,6 +156,7 @@
    "source": [
     "%%writefile -a driver_evaluate_MHD_rhs.C\n",
     "\n",
+    "\n",
     "#include \"cctk.h\"\n",
     "#include <cstdio>\n",
     "#include <cstdlib>\n",
@@ -195,6 +196,7 @@
    ],
    "source": [
     "%%writefile -a driver_evaluate_MHD_rhs.C\n",
+    "\n",
     "\n",
     "extern \"C\" void IllinoisGRMHD_driver_evaluate_MHD_rhs(CCTK_ARGUMENTS) {\n",
     "  DECLARE_CCTK_ARGUMENTS;\n",
@@ -249,6 +251,7 @@
    "source": [
     "%%writefile -a driver_evaluate_MHD_rhs.C\n",
     "\n",
+    "\n",
     "  // FIXME: only for single gamma-law EOS.\n",
     "  eos_struct eos;\n",
     "  eos.neos=neos;\n",
@@ -286,6 +289,7 @@
    ],
    "source": [
     "%%writefile -a driver_evaluate_MHD_rhs.C\n",
+    "\n",
     "\n",
     "  // in_prims,out_prims_r, and out_prims_l are arrays of pointers to the actual gridfunctions.\n",
     "  gf_and_gz_struct in_prims[MAXNUMVARS],out_prims_r[MAXNUMVARS],out_prims_l[MAXNUMVARS];\n",
@@ -375,6 +379,7 @@
    "source": [
     "%%writefile -a driver_evaluate_MHD_rhs.C\n",
     "\n",
+    "\n",
     "  // Convert ADM variables (from ADMBase) to the BSSN-based variables expected by this routine.\n",
     "  IllinoisGRMHD_convert_ADM_to_BSSN__enforce_detgtij_eq_1__and_compute_gtupij(cctkGH,cctk_lsh,  gxx,gxy,gxz,gyy,gyz,gzz,alp,\n",
     "                                                                gtxx,gtxy,gtxz,gtyy,gtyz,gtzz,\n",
@@ -407,6 +412,7 @@
    ],
    "source": [
     "%%writefile -a driver_evaluate_MHD_rhs.C\n",
+    "\n",
     "\n",
     "  /* SET POINTERS TO METRIC GRIDFUNCTIONS */\n",
     "  CCTK_REAL *metric[NUMVARS_FOR_METRIC_FACEVALS]; // \"metric\" here is array of pointers to the actual gridfunctions.\n",
@@ -467,6 +473,7 @@
    ],
    "source": [
     "%%writefile -a driver_evaluate_MHD_rhs.C\n",
+    "\n",
     "\n",
     "  // 1) First initialize {rho_star_rhs,tau_rhs,st_x_rhs,st_y_rhs,st_z_rhs} to zero\n",
     "#pragma omp parallel for\n",
@@ -664,6 +671,8 @@
    "source": [
     "%%writefile -a driver_evaluate_MHD_rhs.C\n",
     "\n",
+    "\n",
+    "\n",
     "  /* There are two stories going on here:\n",
     "   * 1) Computation of \\partial_x on RHS of \\partial_t {rho_star,tau,mhd_st_{x,y,z}}, \n",
     "   *    via PPM reconstruction onto (i-1/2,j,k), so that \n",
@@ -775,6 +784,7 @@
    "source": [
     "%%writefile -a driver_evaluate_MHD_rhs.C\n",
     "\n",
+    "\n",
     "  // Note that we have already reconstructed vx and vy along the x-direction, \n",
     "  //   at (i-1/2,j,k). That result is stored in v{x,y}{r,l}.  Bx_stagger data\n",
     "  //   are defined at (i+1/2,j,k).\n",
@@ -810,7 +820,6 @@
     "   * 2B) Ax_rhs is defined at (i,j+1/2,k+1/2), and it depends on {By,Bz,vy,vz}.\n",
     "   *     Again the trick is to reconstruct these onto these staggered points.\n",
     "   * 2Ba) Bz_stagger is at (i,j,k+1/2), and we reconstruct to (i,j-1/2,k+1/2) below */\n",
-    "\n",
     "  ww=0;\n",
     "  // NOTE! The order of variable reconstruction is important here,\n",
     "  //   as we don't want to overwrite {vxr,vxl,vyr,vyl}!\n",
@@ -918,6 +927,7 @@
    "source": [
     "%%writefile -a driver_evaluate_MHD_rhs.C\n",
     "\n",
+    "\n",
     "  /*****************************************\n",
     "   * COMPUTING RHS OF A_z, BOOKKEEPING NOTE:\n",
     "   * We want to compute \n",
@@ -967,6 +977,7 @@
    "source": [
     "%%writefile -a driver_evaluate_MHD_rhs.C\n",
     "\n",
+    "\n",
     "  int A_directionz=3;\n",
     "  A_i_rhs_no_gauge_terms(A_directionz,cctkGH,cctk_lsh,cctk_nghostzones,out_prims_r,out_prims_l,temporary,cmax_x,cmin_x,cmax_y,cmin_y, Az_rhs);"
    ]
@@ -1006,6 +1017,7 @@
    ],
    "source": [
     "%%writefile -a driver_evaluate_MHD_rhs.C\n",
+    "\n",
     "\n",
     "  // in_prims[{VYR,VYL,VZR,VZL}].gz_{lo,hi} ghostzones are not correct, so we fix \n",
     "  //    this below.\n",
@@ -1202,6 +1214,7 @@
    "source": [
     "%%writefile -a driver_evaluate_MHD_rhs.C\n",
     "\n",
+    "\n",
     "  int A_directionx=1;\n",
     "  A_i_rhs_no_gauge_terms(A_directionx,cctkGH,cctk_lsh,cctk_nghostzones,out_prims_r,out_prims_l,temporary,cmax_y,cmin_y,cmax_z,cmin_z, Ax_rhs);"
    ]
@@ -1242,6 +1255,7 @@
    ],
    "source": [
     "%%writefile -a driver_evaluate_MHD_rhs.C\n",
+    "\n",
     "\n",
     "  // We reprise flux_dirn=1 to finish up computations of Ai_rhs's!\n",
     "  flux_dirn=1;\n",
@@ -1309,6 +1323,7 @@
    "source": [
     "%%writefile -a driver_evaluate_MHD_rhs.C\n",
     "  \n",
+    "\n",
     "  int A_directiony=2;\n",
     "  A_i_rhs_no_gauge_terms(A_directiony,cctkGH,cctk_lsh,cctk_nghostzones,out_prims_r,out_prims_l,temporary,cmax_z,cmin_z,cmax_x,cmin_x, Ay_rhs);"
    ]
@@ -1356,6 +1371,7 @@
    "source": [
     "%%writefile -a driver_evaluate_MHD_rhs.C\n",
     "\n",
+    "\n",
     "  // Next compute psi6phi_rhs, and add gauge terms to A_i_rhs terms!\n",
     "  //   Note that in the following function, we don't bother with reconstruction, instead interpolating.\n",
     "  // We need A^i, but only have A_i. So we add gtupij to the list of input variables.\n",
@@ -1384,7 +1400,6 @@
     "\n",
     "\n",
     "  return;\n",
-    "\n",
     "  /*\n",
     "  // FUN DEBUGGING TOOL (trust me!): \n",
     "  #pragma omp parallel for\n",
@@ -1420,10 +1435,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='latex_pdf_output'></a>\n",
+    "<a id='code_validation'></a>\n",
     "\n",
-    "# Step 4: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
-    "$$\\label{latex_pdf_output}$$"
+    "# Step 4: Code validation \\[Back to [top](#toc)\\]\n",
+    "$$\\label{code_validation}$$\n",
+    "\n",
+    "First we will download the original `IllinoisGRMHD` source code."
    ]
   },
   {
@@ -1435,8 +1452,103 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "--2019-09-16 13:49:53--  https://bitbucket.org/zach_etienne/wvuthorns/raw/ea4d70af29c988ce25fc5fdba5550e31e52f7df3/IllinoisGRMHD/src/driver_evaluate_MHD_rhs.C\n",
+      "Resolving bitbucket.org (bitbucket.org)... 18.205.93.2, 18.205.93.0, 18.205.93.1, ...\n",
+      "Connecting to bitbucket.org (bitbucket.org)|18.205.93.2|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 30160 (29K) [text/plain]\n",
+      "Saving to: ‘driver_evaluate_MHD_rhs-validation.C’\n",
+      "\n",
+      "driver_evaluate_MHD 100%[===================>]  29.45K  --.-KB/s    in 0.03s   \n",
+      "\n",
+      "2019-09-16 13:49:53 (1.04 MB/s) - ‘driver_evaluate_MHD_rhs-validation.C’ saved [30160/30160]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!wget -O driver_evaluate_MHD_rhs-validation.C https://bitbucket.org/zach_etienne/wvuthorns/raw/ea4d70af29c988ce25fc5fdba5550e31e52f7df3/IllinoisGRMHD/src/driver_evaluate_MHD_rhs.C"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then we compare the two files and check if it passes the validation test."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "181c181\r\n",
+      "<    *    \\partial_y F = [ F(i+1/2,j,k) - F(i-1/2,j,k) ] / dx\r\n",
+      "---\r\n",
+      ">    *    \\partial_x F = [ F(i+1/2,j,k) - F(i-1/2,j,k) ] / dx\r\n",
+      "184c184\r\n",
+      "<    *    Ai_rhs = \\partial_t A_i = \\epsilon_{ijk} \\psi^{6} (v^j B^k - v^j B^k),\r\n",
+      "---\r\n",
+      ">    *    Ai_rhs = \\partial_t A_i = \\epsilon_{ijk} \\psi^{6} v^j B^k,\r\n",
+      "243c243\r\n",
+      "<    *    Ai_rhs = \\partial_t A_i = \\epsilon_{ijk} \\psi^{6} (v^j B^k - v^j B^k),\r\n",
+      "---\r\n",
+      ">    *    Ai_rhs = \\partial_t A_i = \\epsilon_{ijk} \\psi^{6} v^j B^k,\r\n",
+      "341c341\r\n",
+      "<    *    \\partial_t A_i = \\epsilon_{ijk} \\psi^{6} (v^j B^k - v^j B^k),\r\n",
+      "---\r\n",
+      ">    *    \\partial_t A_i = \\epsilon_{ijk} \\psi^{6} v^j B^k,\r\n",
+      "457,458c457,458\r\n",
+      "<    * (i-1/2,j,k-1/2)| {vyrr,vyrl,vylr,vyll,vzrr,vzrl,vzlr,vzll}\r\n",
+      "<    * (i+1/2,j,k-1/2)| {By_stagger_r,By_stagger_l} (see Table 1 in arXiv:1007.2848)\r\n",
+      "---\r\n",
+      ">    * (i-1/2,j,k-1/2)| {vxrr,vxrl,vxlr,vxll,vzrr,vzrl,vzlr,vzll}\r\n",
+      ">    * (i+1/2,j,k-1/2)| {Bx_stagger_r,Bx_stagger_l} (see Table 1 in arXiv:1007.2848)\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Uncommend this after diff have been resolved\n",
+    "# vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv\n",
+    "# import filecmp\n",
+    "\n",
+    "# if filecmp.cmp('driver_evaluate_MHD_rhs.C',\n",
+    "#                'driver_evaluate_MHD_rhs-validation.C') == False:\n",
+    "#     print(\"ERROR: driver_evaluate_MHD_rhs.C validation FAILED!\")\n",
+    "#     exit(1)\n",
+    "# else:\n",
+    "#     print(\"driver_evaluate_MHD_rhs.C validation PASSED!\")\n",
+    "# ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+    "# Uncommend this after diff have been resolved\n",
+    "\n",
+    "!diff -w driver_evaluate_MHD_rhs-validation.C driver_evaluate_MHD_rhs.C"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='latex_pdf_output'></a>\n",
+    "\n",
+    "# Step 5: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
+    "$$\\label{latex_pdf_output}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD_driver_evaluate_MHD_rhs.ipynb to latex\n",
-      "[NbConvertApp] Writing 104238 bytes to Tutorial-IllinoisGRMHD_driver_evaluate_MHD_rhs.tex\n",
+      "[NbConvertApp] Writing 110533 bytes to Tutorial-IllinoisGRMHD_driver_evaluate_MHD_rhs.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
