Fixed one more comment to make it consistent with the previous two that are similar to it

--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD_driver_evaluate_MHD_rhs.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD_driver_evaluate_MHD_rhs.ipynb
@@ -1036,7 +1036,7 @@
     "   * 1) Single reconstruction to (i,j,k-1/2) for {rho,P,vx,vy,vz,Bx,By,Bz} to compute\n",
     "   *    z-dir'n advection terms in \\partial_t {rho_star,tau,mhd_st_{x,y,z}} at (i,j,k)\n",
     "   * 2) Multiple reconstructions for *staggered* gridfunctions A_i:\n",
-    "   *    \\partial_t A_i = \\epsilon_{ijk} \\psi^{6} v^j B^k,\n",
+    "   *    Ai_rhs = \\partial_t A_i = \\epsilon_{ijk} \\psi^{6} v^j B^k,\n",
     "   *    where \\epsilon_{ijk} is the flat-space antisymmetric operator.\n",
     "   * 2A) Ax_rhs is defined at (i,j+1/2,k+1/2), depends on v{y,z} and B{y,z}\n",
     "   * 2Aa) v{y,z}{r,l} are at (i,j-1/2,k), so we reconstruct here to (i,j-1/2,k-1/2)\n",
@@ -1452,16 +1452,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2019-09-16 13:49:53--  https://bitbucket.org/zach_etienne/wvuthorns/raw/ea4d70af29c988ce25fc5fdba5550e31e52f7df3/IllinoisGRMHD/src/driver_evaluate_MHD_rhs.C\n",
-      "Resolving bitbucket.org (bitbucket.org)... 18.205.93.2, 18.205.93.0, 18.205.93.1, ...\n",
+      "--2019-09-16 15:36:45--  https://bitbucket.org/zach_etienne/wvuthorns/raw/ea4d70af29c988ce25fc5fdba5550e31e52f7df3/IllinoisGRMHD/src/driver_evaluate_MHD_rhs.C\n",
+      "Resolving bitbucket.org (bitbucket.org)... 18.205.93.2, 18.205.93.1, 18.205.93.0, ...\n",
       "Connecting to bitbucket.org (bitbucket.org)|18.205.93.2|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 30160 (29K) [text/plain]\n",
       "Saving to: ‘driver_evaluate_MHD_rhs-validation.C’\n",
       "\n",
-      "driver_evaluate_MHD 100%[===================>]  29.45K  --.-KB/s    in 0.03s   \n",
+      "driver_evaluate_MHD 100%[===================>]  29.45K  --.-KB/s    in 0.001s  \n",
       "\n",
-      "2019-09-16 13:49:53 (1.04 MB/s) - ‘driver_evaluate_MHD_rhs-validation.C’ saved [30160/30160]\n",
+      "2019-09-16 15:36:45 (25.3 MB/s) - ‘driver_evaluate_MHD_rhs-validation.C’ saved [30160/30160]\n",
       "\n"
      ]
     }
@@ -1501,7 +1501,7 @@
       "341c341\r\n",
       "<    *    \\partial_t A_i = \\epsilon_{ijk} \\psi^{6} (v^j B^k - v^j B^k),\r\n",
       "---\r\n",
-      ">    *    \\partial_t A_i = \\epsilon_{ijk} \\psi^{6} v^j B^k,\r\n",
+      ">    *    Ai_rhs = \\partial_t A_i = \\epsilon_{ijk} \\psi^{6} v^j B^k,\r\n",
       "457,458c457,458\r\n",
       "<    * (i-1/2,j,k-1/2)| {vyrr,vyrl,vylr,vyll,vzrr,vzrl,vzlr,vzll}\r\n",
       "<    * (i+1/2,j,k-1/2)| {By_stagger_r,By_stagger_l} (see Table 1 in arXiv:1007.2848)\r\n",
@@ -1548,7 +1548,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD_driver_evaluate_MHD_rhs.ipynb to latex\n",
-      "[NbConvertApp] Writing 110533 bytes to Tutorial-IllinoisGRMHD_driver_evaluate_MHD_rhs.tex\n",
+      "[NbConvertApp] Writing 110478 bytes to Tutorial-IllinoisGRMHD_driver_evaluate_MHD_rhs.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
